Start using micrometer tags consistently for score providers